--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Construction\AbstractBuilder.cs" />
+    <Compile Include="Construction\CommandLineBuilder.cs" />
+    <Compile Include="Construction\HardCodedBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
