--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -48,12 +48,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\CompositeShape.cs" />
+    <Compile Include="Shapes\GDI\CircleGDI.cs" />
+    <Compile Include="Shapes\GDI\CompositeShapeGDI.cs" />
+    <Compile Include="Shapes\GDI\RectangleGDI.cs" />
+    <Compile Include="Shapes\GDI\ShapeFactoryGDI.cs" />
+    <Compile Include="Shapes\GL\CircleGL.cs" />
+    <Compile Include="Shapes\GL\CompositeShapeGL.cs" />
+    <Compile Include="Shapes\GL\RectangleGL.cs" />
+    <Compile Include="Shapes\GL\ShapeFactoryGL.cs" />
+    <Compile Include="Shapes\Qt\CircleQt.cs" />
+    <Compile Include="Shapes\Qt\CompositeShapeQt.cs" />
+    <Compile Include="Shapes\Qt\RectangleQt.cs" />
+    <Compile Include="Shapes\Qt\ShapeFactoryQt.cs" />
     <Compile Include="Shapes\Rectangle.cs" />
     <Compile Include="Shapes\Shape.cs" />
+    <Compile Include="Shapes\ShapeFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
